# aichess_bot

./: ._chess_robot_ros2_plan.md  2025-09-21-command-messageinit-is-analyzing-your-codebase.txt  CLAUDE.md  DEVELOPMENT_PROGRESS.md  PROJECT_SUMMARY.md  PROJECT_TODOLIST.md  WEB_UI_COMPLETED.md  WEB_VIEWER_QUICK_START.md  WEB_VIEWER_README.md  auto_commit.sh  chess_robot_ros2_plan.md  international_chess_robot_ros2.md  start_web_viewer.sh  test_integration.py
chess_arm_updated/: package.xml  setup.cfg  setup.py
chess_arm_updated/chess_arm/: arm_controller.py  chess_arm_sim.py
chess_camera/: setup.cfg  setup.py
chess_camera/chess_camera/: sim_camera_node.py
chess_coordinator_updated/: package.xml  setup.cfg  setup.py
chess_coordinator_updated/chess_coordinator/: international_chess_coordinator.py  system_coordinator.py
chess_coordinator_updated/launch/: chess_basic_test.launch.py
chess_game_updated/: package.xml  setup.cfg  setup.py
chess_game_updated/chess_game/: game_engine.py  international_chess_engine.py  stockfish_engine.py
chess_game_updated/scripts/: test_engine.py
chess_interfaces_updated/: CMakeLists.txt  package.xml
chess_interfaces_updated/msg/: BoardState.msg  ChessMove.msg  GameStatus.msg
chess_interfaces_updated/srv/: DetectBoard.srv  ExecuteMove.srv  GetEngineMove.srv  PlanMove.srv  ValidateMove.srv
chess_simulation_final/: CMakeLists.txt  WEB_STATUS_SUMMARY.md
chess_simulation_final/config/: bridge_config.yaml  gui.config
chess_simulation_final/launch/: headless_gazebo.launch.py  international_chess_complete.launch.py  simple_gazebo.launch.py
chess_simulation_final/models/chess_piece/: model.config  model.sdf
chess_simulation_final/models/dofbot_pro/: model.config  model.sdf
chess_simulation_final/scripts/: simple_websocket.py  start_web_gazebo.sh  system_info_node.py  websocket_server.py
chess_simulation_final/worlds/: international_chess_world.sdf
chess_simulation_updated/: WEB_ACCESS_GUIDE.md  package.xml
chess_simulation_updated/config/: gazebo_web.yaml
chess_simulation_updated/launch/: chess_sim_full.launch.py  gazebo_world.launch.py  test_gazebo.launch.py
chess_simulation_updated/scripts/: gazebo_web_server.py  setup_web_access.sh  test_websocket.py  web_gazebo_launcher.py  websocket_bridge.py
chess_simulation_updated/web/: index.html
chess_simulation_updated/worlds/: chess_world.sdf
chess_vision_updated/: package.xml  setup.cfg  setup.py
chess_vision_updated/chess_vision/: board_detector.py  board_detector_enhanced.py  international_chess_vision_sim.py  piece_recognition_model.py
chess_vision_updated/scripts/: collect_training_data.py  test_cnn.py  train_cnn_model.py  training_pipeline.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/chess_arm/lib/chess_arm/: arm_controller.py
install/chess_arm/share/chess_arm/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/chess_arm/share/chess_arm/cmake/: chess_armConfig.cmake
install/chess_camera/lib/chess_camera/: sim_camera_node
install/chess_camera/share/chess_camera/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/chess_coordinator/share/chess_coordinator/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/chess_coordinator/share/chess_coordinator/cmake/: chess_coordinatorConfig.cmake
install/chess_description/share/chess_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/chess_game/share/chess_game/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/chess_interfaces/share/chess_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/chess_interfaces/share/chess_interfaces/cmake/: chess_interfaces__rosidl_typesupport_cExport-noconfig.cmake  chess_interfaces__rosidl_typesupport_cExport.cmake  chess_interfaces__rosidl_typesupport_cppExport.cmake  chess_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  (+6 more)
install/chess_simulation/share/chess_simulation/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/chess_simulation/share/chess_simulation/launch/: chess_world_with_robot.launch.py  gazebo_world.launch.py
install/chess_simulation/share/chess_simulation/models/chess_piece/: model.config  model.sdf
install/chess_vision/share/chess_vision/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/chess_arm/: CMakeLists.txt  package.xml  setup.py
src/chess_arm/chess_arm/: moveit_arm_controller.py
src/chess_coordinator/: CMakeLists.txt  setup.py
src/chess_coordinator/chess_coordinator/: __init__.py  system_coordinator.py
src/chess_coordinator/launch/: chess_basic_test.launch.py
src/chess_description/: CMakeLists.txt  package.xml
src/chess_description/config/: dofbot_pro_controllers.yaml
src/chess_description/launch/: dofbot_pro.launch.py
src/chess_description/urdf/: dofbot_pro.urdf.xacro
src/chess_game/: setup.py
src/chess_interfaces/: CMakeLists.txt
src/chess_interfaces/srv/: ExecuteMove.srv
src/chess_moveit_config/: CMakeLists.txt  package.xml
src/chess_moveit_config/config/: dofbot_pro.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/chess_moveit_config/launch/: chess_moveit.launch.py
src/chess_simulation/: CMakeLists.txt  package.xml
src/chess_simulation/launch/: chess_web_viewer.launch.py
src/chess_simulation/scripts/: setup_web_access.sh
src/chess_simulation/worlds/: chess_world.sdf
src/chess_vision/: package.xml  setup.py
src/chess_vision/chess_vision/: piece_detector.py  vision_coordinator.py
src/chess_vision/config/: vision_params.yaml
src/chess_vision/launch/: chess_vision.launch.py
web_viewer/: gazebo_web_server.py  gazebo_web_server_fixed.py  simple_web_test.py
web_viewer/templates/: index.html
(+76 files in other folders)
