<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_coordinator</name>
  <version>0.0.1</version>
  <description>象棋机器人系统协调器，负责统一管理和协调各个子系统</description>

  <maintainer email="chess@robot.com">Chess Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2依赖 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>chess_interfaces</depend>

  <!-- 系统管理相关 -->
  <depend>lifecycle_msgs</depend>
  <depend>rclpy_lifecycle</depend>


  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>