<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_simulation</name>
  <version>0.0.1</version>
  <description>Gazebo仿真环境包，用于象棋机器人的仿真开发</description>
  <maintainer email="chess@robot.com">Chess Robot Team</maintainer>
  <license>MIT</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>ros-ign-gazebo</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- 执行依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ros-ign-gazebo</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>